fix weird responsive overflow issue

--- a/stylesheets/_content.scss
+++ b/stylesheets/_content.scss
@@ -3,7 +3,6 @@
 
 main, .maincontent {
   background-color:#FFF;
-  width: 100%;
   max-width: $body_size;
   margin: 0 auto;
   padding: 0;
