--- a/stylesheets/_nav.scss
+++ b/stylesheets/_nav.scss
@@ -143,6 +143,7 @@ snap-content, .snap-content{
   background-color: #fff;
   /*overflow: initial;*/
   display: block;
+  overflow-x: hidden;
 }
 
 .drawer-menu {
